--- a/bladezone/settings.opy.json
+++ b/bladezone/settings.opy.json
@@ -1,6 +1,6 @@
 {
     "main": {
-        "description": "Bladezone, by Provoxin#1418"
+        "description": "Bladezone, by Provoxin#1418. Code: 101G1"
     },
     "lobby": {
         "allowPlayersInQueue": true,
